idf_component_register(
    SRCS
        "main.cpp"
        "peripherials/encoder/encoder.cpp"
        "peripherials/motorcontrol/motorcontrol.cpp"
        "peripherials/usbserial/usbSerial.cpp"
        "peripherials/telemetry/telemetry.cpp"
        "peripherials/pid/pid.cpp"
    INCLUDE_DIRS
        "."
        "peripherials/encoder"
        "peripherials/motorcontrol"
        "peripherials/usbserial"
        "peripherials/telemetry"
        "peripherials/pid"
)
